WIP add some features to Reservation model
don't know why all() doesn't work

it should return me all these rows in my local

SELECT reservationid, start, end, roomid, username, numberingroup, timeofrequest FROM openroom.reservations;
+---------------+---------------------+---------------------+--------+----------+---------------+---------------------+
| reservationid | start               | end                 | roomid | username | numberingroup | timeofrequest       |
+---------------+---------------------+---------------------+--------+----------+---------------+---------------------+
|           324 | 2018-08-27 19:00:00 | 2018-08-27 20:59:59 |     29 | ttam     |            15 | 2018-07-12 15:21:19 |
|           325 | 2018-07-18 14:00:00 | 2018-07-18 14:29:59 |     28 | admin    |             1 | 2018-07-18 19:40:30 |
|           326 | 2018-07-18 15:00:00 | 2018-07-18 15:29:59 |     28 | admin    |             1 | 2018-07-18 19:41:39 |
|           327 | 2018-07-18 15:30:00 | 2018-07-18 15:59:59 |     28 | admin    |             1 | 2018-07-18 19:42:18 |
|           329 | 2018-07-19 01:00:00 | 2018-07-19 01:29:59 |     28 | admin    |             1 | 2018-07-18 20:35:53 |
|           330 | 2018-07-20 01:00:00 | 2018-07-20 01:29:59 |     28 | admin    |             1 | 2018-07-18 20:35:53 |
|           331 | 2018-07-21 01:00:00 | 2018-07-21 01:29:59 |     28 | admin    |             1 | 2018-07-18 20:35:53 |
|           332 | 2018-07-22 01:00:00 | 2018-07-22 01:29:59 |     28 | admin    |             1 | 2018-07-18 20:35:53 |
|           333 | 2018-07-23 01:00:00 | 2018-07-23 01:29:59 |     28 | admin    |             1 | 2018-07-18 20:35:53 |
|           335 | 2018-07-19 00:00:00 | 2018-07-19 00:29:59 |     28 | admin    |             1 | 2018-07-18 20:41:15 |
|           336 | 2018-07-20 00:00:00 | 2018-07-20 00:29:59 |     28 | admin    |             1 | 2018-07-18 20:41:15 |
|           337 | 2018-07-21 00:00:00 | 2018-07-21 00:29:59 |     28 | admin    |    

--- a/themes/kushal/administrator.html
+++ b/themes/kushal/administrator.html
@@ -4,7 +4,7 @@
 <article>
     <hgroup>
         <h2>
-            Administrators
+            {{ page_title }}
         </h2>
         <h3>
             Add an administrator
