--- a/themes/kushal/home.html
+++ b/themes/kushal/home.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     {% block head %}
-    <link rel="stylesheet" href="/vendor/twbs/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/themes/kushal/assets/sass/hello.css"/>
+    <link rel="stylesheet" href="../vendor/twbs/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../themes/kushal/assets/sass/hello.css"/>
     <title>{% block title %}{% endblock %} - {{ title }}</title>
     {% endblock %}
 </head>
