add a room model
update reservations to include room name

add log out link to reservation template

/Users/student/src/devilbox/data/www/openroom/public/themes/kushal/reservation.html
Warning:(13, 21) Cannot resolve directory 'modules'
Warning:(13, 29) Cannot resolve file 'logout.php'
/Users/student/src/devilbox/data/www/openroom/public/model/Room.php
Warning:(38, 44) ext-pdo is missing in composer.json
/Users/student/src/devilbox/data/www/openroom/public/model/Reservation.php
Warning:(44, 51) ext-pdo is missing in composer.json
Warning:(52, 32) ext-pdo is missing in composer.json
Warning:(62, 61) ext-pdo is missing in composer.json
Warning:(66, 51) ext-pdo is missing in composer.json
Warning:(74, 37) ext-pdo is missing in composer.json
Warning:(77, 51) ext-pdo is missing in composer.json

--- a/themes/kushal/notLoggedIn.html
+++ b/themes/kushal/notLoggedIn.html
@@ -3,17 +3,13 @@
 {% block content %}
 
 <article>
-    <hgroup>
         <h2>
             {{ page_title }}
         </h2>
-    </hgroup>
     <p>
         You are not logged in. Please
-        <a href="../">
-            click here
-        </a>
-        and login with an account that is an authorized administrator or reporter.
+        <a href="../">click here</a>
+        to authenticate.
     </p>
 </article>
 {% endblock %}
