add a meta refresh to force refresh every 30 seconds
<meta http-equiv="refresh" content="30">

--- a/themes/kushal/home.html
+++ b/themes/kushal/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     {% block head %}
+    <meta http-equiv="refresh" content="30">
     <link rel="stylesheet" href="../vendor/twbs/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../themes/kushal/assets/sass/hello.css"/>
     <title>{% block title %}{% endblock %} - {{ title }}</title>
