WIP work on creating a public reservation page
for #19

Create a simple logo for favicon

https://via.placeholder.com/512x512/607D8B/263238/?text=O

--- a/themes/kushal/home.html
+++ b/themes/kushal/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="refresh" content="30">
     <link rel="stylesheet" href="../vendor/twbs/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../themes/kushal/assets/sass/hello.css"/>
+    <link rel="icon" type="image/png" href="https://via.placeholder.com/512x512/607D8B/263238/?text=O">
     <title>{% block title %}{% endblock %} - {{ title }}</title>
     {% endblock %}
 </head>
