--- a/themes/kushal/home.html
+++ b/themes/kushal/home.html
@@ -14,6 +14,14 @@
     <h1 class="text-center">
         {{ title }}
     </h1>
+    <nav class="text text-muted small">
+        <ul>
+            <li>
+                <a href="/public/index.php">Home</a>
+                <a href="/public/reservation.php">Reservations</a>
+            </li>
+        </ul>
+    </nav>
 </div>
 <div id="content">
     {% block content %}{% endblock %}
